--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+   <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
    <body>
       <p>Radio check. Pilot, please confirm.</p>
       <p>Confirmed.</p>
